--- a/lesson_5/css/style.css
+++ b/lesson_5/css/style.css
@@ -1,3 +1,5 @@
+@import url("reset.css");
+
 .box{
     font-family: "Poppins";
     max-width: 1440px;  
@@ -15,8 +17,8 @@ h2{
 }
 .section{
     width: 816px;
-    margin: 0 auto;
-    font-style: normal;
+    margin: 0 auto;  
+    font-weight: 300;
     color: #6C757D;
     font-size: 14px;
     line-height: 1.8;
